--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ buildscript {
 
 allprojects {
     repositories {
+        maven { url "https://archiva.interlocsolutions.com/archiva/repository/internal" }
         google()
         mavenCentral()
         maven { url "https://jitpack.io" }
