--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,6 +52,5 @@ jobs:
     - name: Release
       run: |
         gh release create r${{env.CommitCount}} --generate-notes --latest=false --prerelease --title "[${{env.CommitDate}}] ${{github.event.repository.name}} r${{env.CommitCount}}@${{env.CommitHashShort}}"
-        gh release create latest                --generate-notes --latest=false --prerelease --title "[${{env.CommitDate}}] ${{github.event.repository.name}} r${{env.CommitCount}}@${{env.CommitHashShort}}"
-        gh release upload r${{env.DSOALCommitCount}} "${{env.Artifacts}}"
-        gh release upload latest                     "${{env.Artifacts}}"
+        gh release upload r${{env.CommitCount}} "${{env.Artifacts}}"
+        gh release upload latest --clobber      "${{env.Artifacts}}" 
