--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,7 @@
 name: Build
 
 env:
-  Artifacts: app/build/outputs/apk/debug/*.apk
+  Artifacts: app/build/outputs/apk/debug/app-debug.apk
   Branch: ${{github.ref_name}}
   GH_TOKEN: ${{ github.token }}
 
