--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,4 +53,4 @@ jobs:
       run: |
         gh release create r${{env.CommitCount}} --generate-notes --latest=false --prerelease --title "[${{env.CommitDate}}] ${{github.event.repository.name}} r${{env.CommitCount}}@${{env.CommitHashShort}}"
         gh release upload r${{env.CommitCount}} "${{env.Artifacts}}"
-        gh release upload latest --clobber      "${{env.Artifacts}}" 
+        gh release upload latest                "${{env.Artifacts}}" --clobber
